fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ section {
   width: 100%;
 }
 main {
-  margin: 50px 20%;
+  margin: 5% 5%;
   height: 80%;
   overflow-y: scroll;
   display: flex;
