--- a/src/components/FollowingHome/FollowingHome.css
+++ b/src/components/FollowingHome/FollowingHome.css
@@ -1,19 +1,33 @@
 .FollowingHome {
-  display:grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 1fr 4fr;
-  grid-gap: 5px;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
 }
 
 .UserInfoContainer {
-  grid-area: 1 / 1 / 2 / 2;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .FollowingContainer {
-  grid-area: 2 / 1 / 3 / 2;
+  font-family: "Alata", sans-serif;
 }
 
 .TweepStreamContainer {
-  grid-area: 1 / 2 / 3 / 3;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: scroll;
+  padding: 2px;
+}
+
+
+@media only screen and (max-width: 700px) {
+  .FollowingHome {
+    display: flex;
+    flex-direction: column;
+  }
 }
